dts/testData/inspections/requiredProperty/DeleteNodeRoot.dts
/include/ "Declaration.dtsi"

&lable {
    phy-handle = "";
};

/delete-node/ &{/};

<error descr="Missing required properties: \"compatible\", \"phy-handle\"">&lable</error> {};
